--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl -k https://www.ssen.co.uk/Sse_Components/Views/Controls/FormControls/PowerTrackHandler.ashx | jq . > outages.json
+        curl -k https://ssen-powertrack-api.opcld.com/gridiview/reporter/info | jq . > outages.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
